// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateClusterDropdown /> User with no quota should hide option to create managed and auto installed clusters 1`] = `
<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        <Link
          replace={false}
          to="/install"
        >
          Self-Installed Cluster
        </Link>
      </DropdownItem>,
    ]
  }
  isGrouped={false}
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <DropdownToggle
      className="pf-c-button pf-m-primary"
      iconComponent={[Function]}
      id=""
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Create Cluster
    </DropdownToggle>
  }
/>
`;

exports[`<CreateClusterDropdown /> renders correctly 1`] = `
<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        <Link
          replace={false}
          to="/install"
        >
          Self-Installed Cluster
        </Link>
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        onClick={[MockFunction]}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Red Hat-Managed Cluster
      </DropdownItem>,
    ]
  }
  isGrouped={false}
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="left"
  toggle={
    <DropdownToggle
      className="pf-c-button pf-m-primary"
      iconComponent={[Function]}
      id=""
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Create Cluster
    </DropdownToggle>
  }
/>
`;
